update deb build

--- a/conf/mogilefsd.conf
+++ b/conf/mogilefsd.conf
@@ -1,5 +1,5 @@
-# Enable daemon mode to work in background and use syslog
-daemonize = 1
+# dont daemonize as we use systemd
+daemonize = 0
 # Where to store the pid of the daemon (must be the same in the init script)
 pidfile = /var/run/mogilefsd/mogilefsd.pid
 # Database connection information
